pyquest/tests/semantic_analysis/valid/test002.ql
// Identifier reference in computed question
form testForm {
	"First Question"
	testIdentifier : integer
	"Second Question"
	anotherIdentifier : integer = testIdentifier
}